Standardise GA events (#1347)

--- a/templates/individual_response/confirmation-text-message.html
+++ b/templates/individual_response/confirmation-text-message.html
@@ -41,10 +41,11 @@
             "classes": 'ons-u-mb-m ons-u-mt-l',
             "attributes": {
                 'data-qa': 'btn-submit',
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Continue",
-                "data-ga-label": "Continue button click",
-                "data-ga": "click"
+                "data-ga-category": "Button",
+                "data-ga-action": "Submit",
+                "data-ga-label": "Confirmation Text Message Continue",
+                "data-ga-page": "Individual Response",
+                "data-ga": "click",
             }
         })
     }}
