--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -14,9 +14,11 @@
                 "id": "top-previous",
                 "text": _("Previous"),
                 "attributes": {
-                    "data-ga": 'click',
-                    "data-ga-category": 'Navigation',
-                    "data-ga-action": 'Previous link click'
+                    "data-ga": "click",
+                    "data-ga-category": "Link",
+                    "data-ga-action": "Navigate",
+                    "data-ga-label": "Previous",
+                    "data-ga-page": "Questionnaire",
                 }
             }
         ]
