--- a/templates/layouts/_submit.html
+++ b/templates/layouts/_submit.html
@@ -42,10 +42,11 @@
                 "classes": 'ons-u-mb-m ons-u-mt-' ~ ("s" if content.guidance else "xl"),
                 "attributes": {
                     "data-qa": "btn-submit",
-                    "data-ga-category": "Submit Button",
+                    "data-ga-category": "Button",
                     "data-ga-action": "Submit",
-                    "data-ga-label": "Submit Button click",
-                    "data-ga": "click"
+                    "data-ga-label": "Submit",
+                    "data-ga-page": "Questionnaire",
+                    "data-ga": "click",
                 }
             })
         }}
