--- a/templates/partials/definition.html
+++ b/templates/partials/definition.html
@@ -8,10 +8,11 @@
         "classes": "ons-u-mb-s",
         "headingAttributes": {
             "data-ga": "click",
-            "data-ga-category": category,
-            "data-ga-action": "Open panel",
-            "data-ga-label": definition.title,
-            "data-qa": definition_id ~ "-title"
+            "data-ga-category": "Accordion",
+            "data-ga-action": "View",
+            "data-ga-label": "Definition",
+            "data-ga-page": "Questionnaire",
+            "data-qa": definition_id ~ "-title",
         },
         "contentAttributes": {
             "data-qa": definition_id ~ "-content"
