--- a/templates/partials/individual-response-guidance.html
+++ b/templates/partials/individual-response-guidance.html
@@ -7,9 +7,10 @@
         "title": title,
         "headingAttributes": {
             "data-ga": "click",
-            "data-ga-category": "definition",
-            "data-ga-action": "Open panel",
-            "data-ga-label": title
+            "data-ga-category": "Accordion",
+            "data-ga-action": "View",
+            "data-ga-label": "Open Definition",
+            "data-ga-page": "Individual Response",
         }
     })
 %}
