--- a/templates/partials/introduction/preview.html
+++ b/templates/partials/introduction/preview.html
@@ -19,8 +19,10 @@
             "content": content,
             "summaryAttributes": {
                 "data-ga": "click",
-                "data-ga-category": "Preview Survey",
-                "data-ga-action": "Open panel",
+                "data-ga-category": "Accordion",
+                "data-ga-action": "Preview",
+                "data-ga-label": "Preview Question",
+                "data-ga-page": "Introduction",
             }
         } %}
         {% do accordionItems.append(item) %}
@@ -33,9 +35,10 @@
             "close": _('Hide all'),
             "attributes": {
                 "data-ga": "click",
-                "data-ga-category": "Preview Survey",
-                "data-ga-action": "Show all",
-                "data-ga-label": "Show all"
+                "data-ga-category": "Button",
+                "data-ga-action": "View",
+                "data-ga-label": "Show all",
+                "data-ga-page": "Introduction",
             }
         },
         "itemsList": accordionItems
