--- a/templates/partials/summary/collapsible-summary.html
+++ b/templates/partials/summary/collapsible-summary.html
@@ -52,9 +52,10 @@
             "close": _('Hide all'),
             "attributes": {
                 "data-ga": "click",
-                "data-ga-category": "Preview Survey",
-                "data-ga-action": "Show all",
-                "data-ga-label": "Show all"
+                "data-ga-category": "Button",
+                "data-ga-action": "View",
+                "data-ga-label": "Collapsible Answers",
+                "data-ga-page": "Summary",
             }
         },
         "itemsList": itemList
