--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -16,9 +16,11 @@
                 "id": "back-to-surveys",
                 "text": _("Back to surveys"),
                 "attributes": {
-                    "data-ga": 'click',
-                    "data-ga-category": 'Navigation',
-                    "data-ga-action": 'Back to surveys link click'
+                    "data-ga": "click",
+                    "data-ga-category": "Link",
+                    "data-ga-action": "Navigate",
+                    "data-ga-label": "Back to Surveys",
+                    "data-ga-page": "Thank You",
                 }
             }
         ]
