--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -14,9 +14,11 @@
             "id": "top-previous",
             "text": _("Back"),
             "attributes": {
-                "data-ga": 'click',
-                "data-ga-category": 'Navigation',
-                "data-ga-action": 'Previous link click'
+                "data-ga": "click",
+                "data-ga-category": "Link",
+                "data-ga-action": "Navigate",
+                "data-ga-label": "Previous",
+                "data-ga-page": "View Submitted Response",
             }
         }
     ]
@@ -34,10 +36,11 @@
                 "variants": ['small', 'secondary', 'print'],
                 "attributes": {
                     "data-qa": "btn-print",
-                    "data-ga-category": "Print button",
-                    "data-ga-action": "Open print Dialogue",
-                    "data-ga-label": "Print button click",
-                    "data-ga": "click"
+                    "data-ga-category": "Button",
+                    "data-ga-action": "View",
+                    "data-ga-label": "Print Dialogue",
+                    "data-ga-page": "View Submitted Response",
+                    "data-ga": "click",
                 }
             })
         }}
@@ -49,10 +52,11 @@
                 "removeDownloadAttribute": true,
                 "attributes": {
                     "data-qa": "btn-pdf",
-                    "data-ga-category": "PDF button",
-                    "data-ga-action": "Download PDF",
-                    "data-ga-label": "PDF button click",
-                    "data-ga": "click"
+                    "data-ga-category": "Button",
+                    "data-ga-action": "Download",
+                    "data-ga-label": "Download PDF",
+                    "data-ga-page": "View Submitted Response",
+                    "data-ga": "click",
                 }
             })
         }}
