--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -29,11 +29,12 @@
             "variants": 'timer',
             "classes": "ons-u-mt-xl",
             "attributes": {
-                "data-qa": "btn-submit",
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Continue",
-                "data-ga-label": "Continue button click",
-                "data-ga": "click"
+              "data-qa": "btn-submit",
+              "data-ga-category": "Button",
+              "data-ga-action": "Submit",
+              "data-ga-label": "Confirm",
+              "data-ga-page": "Confirmation Email",
+              "data-ga": "click",
             }
         })
     }}
