--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -31,10 +31,11 @@
             "url": url_for('post_submission.get_thank_you'),
             "attributes": {
                 "data-qa": "btn-done",
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Done",
-                "data-ga-label": "Done button click",
-                "data-ga": "click"
+                "data-ga-category": "Button",
+                "data-ga-action": "Submit",
+                "data-ga-label": "Done",
+                "data-ga-page": "Feedback",
+                "data-ga": "click",
             }
         })
     }}
