--- a/templates/layouts/_calculatedsummary.html
+++ b/templates/layouts/_calculatedsummary.html
@@ -18,10 +18,11 @@
             "variants": 'timer',
             "attributes": {
                 "data-qa": "btn-submit",
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Confirm",
-                "data-ga-label": "Confirm button click",
-                "data-ga": "click"
+                "data-ga-category": "Button",
+                "data-ga-action": "Submit",
+                "data-ga-label": "Confirm",
+                "data-ga-page": "Calculated Summary",
+                "data-ga": "click",
             }
         })
     }}
