--- a/templates/layouts/configs/_header.html
+++ b/templates/layouts/configs/_header.html
@@ -3,14 +3,14 @@
         {% set sign_out_url = url_for('session.get_sign_out', internal_redirect=true) %}
         {% set header_button_text = sign_out_button_text %}
         {% set header_button_data_qa = "btn-save-sign-out" %}
-        {% set header_button_data_ga_action = "Save and sign out" %}
-        {% set header_button_data_ga_label = "Save and sign out button click" %}
+        {% set header_button_data_ga_action = "Save and Exit" %}
+        {% set header_button_data_ga_label = "Save and Exit Survey" %}
     {% else %}
         {% set sign_out_url = url_for('session.get_sign_out', todo=true) %}
         {% set header_button_text = _("Exit") %}
         {% set header_button_data_qa = "btn-exit" %}
         {% set header_button_data_ga_action = "Exit" %}
-        {% set header_button_data_ga_label = "Exit button click" %}
+        {% set header_button_data_ga_label = "Exit Survey" %}
     {% endif %}
     {# djlint:off #}
     {% set signout_button = {
@@ -18,10 +18,11 @@
         "url": sign_out_url,
         "attributes": {
             "data-qa": header_button_data_qa,
-            "data-ga-category": "Navigation",
+            "data-ga-category": "Button",
             "data-ga-action": header_button_data_ga_action,
             "data-ga-label": header_button_data_ga_label,
-            "data-ga": "click"
+            "data-ga-page": "Questionnaire",
+            "data-ga": "click",
         },
         "iconType": "exit",
         "iconPosition": "after"
