--- a/templates/partials/answer-guidance.html
+++ b/templates/partials/answer-guidance.html
@@ -8,10 +8,11 @@
         "title": _(answer_guidance.schema_item.show_guidance),
         "headingAttributes": {
                 "data-ga": "click",
-                "data-ga-category": "Answer guidance",
-                "data-ga-action": "Open panel",
-                "data-ga-label": _(answer_guidance.schema_item.show_guidance),
-                "data-qa": "answer-guidance-" ~ answer.id ~ "-title"
+                "data-ga-category": "Accordion",
+                "data-ga-action": "View",
+                "data-ga-label": "Answer Guidance",
+                "data-ga-page": "Questionnaire",
+                "data-qa": "answer-guidance-" ~ answer.id ~ "-title",
             },
             "contentAttributes": {
                 "data-qa": "answer-guidance-" ~ answer.id ~ "-content"
