--- a/templates/partials/introduction/start-survey.html
+++ b/templates/partials/introduction/start-survey.html
@@ -9,10 +9,11 @@
         "name": "action[start_questionnaire]",
         "attributes": {
             "data-qa": "btn-submit",
-            "data-ga-category": "Submit button",
-            "data-ga-action": "Start survey",
-            "data-ga-label": "Start button click",
-            "data-ga": "click"
+            "data-ga-category": "Button",
+            "data-ga-action": "Start",
+            "data-ga-label": "Start Survey",
+            "data-ga-page": "Introduction",
+            "data-ga": "click",
         }
     })
 }}
