--- a/templates/preview.html
+++ b/templates/preview.html
@@ -13,9 +13,11 @@
             "id": "top-previous",
             "text": _("Back"),
             "attributes": {
-                "data-ga": 'click',
-                "data-ga-category": 'Navigation',
-                "data-ga-action": 'Previous link click'
+                "data-ga": "click",
+                "data-ga-category": "Link",
+                "data-ga-action": "Navigate",
+                "data-ga-label": "Previous",
+                "data-ga-page": "Preview",
             }
         }
     ]
@@ -53,10 +55,11 @@
             "variants": ['small', 'secondary', 'print'],
             "attributes": {
                 "data-qa": "btn-print",
-                "data-ga-category": "Print button",
-                "data-ga-action": "Open print Dialogue",
-                "data-ga-label": "Print button click",
-                "data-ga": "click"
+                "data-ga-category": "Button",
+                "data-ga-action": "View",
+                "data-ga-label": "Print Dialogue",
+                "data-ga-page": "Preview",
+                "data-ga": "click",
             }
         })
     }}
@@ -68,10 +71,11 @@
             "removeDownloadAttribute": true,
             "attributes": {
                 "data-qa": "btn-pdf",
-                "data-ga-category": "PDF button",
-                "data-ga-action": "Download PDF",
-                "data-ga-label": "PDF button click",
-                "data-ga": "click"
+                "data-ga-category": "Button",
+                "data-ga-action": "Download",
+                "data-ga-label": "Download PDF",
+                "data-ga-page": "Preview",
+                "data-ga": "click",
             }
         })
     }}
@@ -93,11 +97,12 @@
                     "allButton": {
                         "open": _('Show all') ,
                         "close": _('Hide all'),
-                        "attributes": {
-                        "data-ga": "click",
-                        "data-ga-category": "Preview Survey",
-                        "data-ga-action": "Show all",
-                        "data-ga-label": "Show all"
+                            "attributes": {
+                            "data-ga": "click",
+                            "data-ga-category": "Button",
+                            "data-ga-action": "View",
+                            "data-ga-label": "Show all",
+                            "data-ga-page": "Preview",
                         }
                     },
                     "itemsList": itemList
