--- a/templates/sectionsummary.html
+++ b/templates/sectionsummary.html
@@ -11,10 +11,11 @@
         "text": _("Continue"),
         "attributes": {
             "data-qa": "btn-submit",
-            "data-ga-category": "Submit button",
-            "data-ga-action": "Continue",
-            "data-ga-label": "Continue button click",
-            "data-ga": "click"
+            "data-ga-category": "Button",
+            "data-ga-action": "Submit",
+            "data-ga-label": "Continue",
+            "data-ga-page": "Section Summary",
+            "data-ga": "click",
         }
     })
 }}
@@ -52,10 +53,11 @@
             "classes": "ons-u-mt-xl",
             "attributes": {
                 "data-qa": "btn-submit",
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Continue",
-                "data-ga-label": "Continue button click",
-                "data-ga": "click"
+                "data-ga-category": "Button",
+                "data-ga-action": "Submit",
+                "data-ga-label": "Continue",
+                "data-ga-page": "Section Summary",
+                "data-ga": "click",
             }
         })
     }}
