Add item name resolution and change wording for list level answers

--- a/templates/partials/summary/collapsible-summary.html
+++ b/templates/partials/summary/collapsible-summary.html
@@ -26,7 +26,7 @@
                                                 answers_are_editable=content.summary.answers_are_editable,
                                                 no_answer_provided=_("No answer provided"),
                                                 edit_link_text=_("Change"),
-                                                edit_link_aria_label=_("Change your answer for:"),
+                                                edit_link_aria_label=_("Change details for {item_name}"),
                                                 calculated_question=content.summary.calculated_question
                                             )
                                         }
