--- a/templates/partials/summary/summary.html
+++ b/templates/partials/summary/summary.html
@@ -23,9 +23,9 @@
                                     answers_are_editable=content.summary.answers_are_editable,
                                     no_answer_provided=_("No answer provided"),
                                     remove_link_text=_("Remove") if not view_submitted_response else "",
-                                    remove_link_aria_label=_("Remove your answer for:") if not view_submitted_response else "",
+                                    remove_link_aria_label=_("Remove details for {item_name}") if not view_submitted_response else "",
                                     edit_link_text=_("Change") if not view_submitted_response else "",
-                                    edit_link_aria_label=_("Change your answer for:") if not view_submitted_response else "",
+                                    edit_link_aria_label=_("Change details for {item_name}") if not view_submitted_response else "",
                                     calculated_question=content.summary.calculated_question
                                 ),
                                 "classes": "ons-u-mt-m" if loop.index > 1 else "",
