--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -73,9 +73,6 @@
 {% block head %}
     {# djlint:off #}
     {% if google_tag_id %}
-        <script nonce="{{ csp_nonce }}">
-            dataLayer = {{ data_layer | tojson }}
-        </script>
         <!-- Google tag (gtag.js) -->
         <script nonce="{{ csp_nonce }}">
             function loadGoogleTagScript() {
@@ -99,7 +96,7 @@
                     function gtag(){dataLayer.push(arguments);}
                     gtag('js', new Date());
                     gtag('config', '{{ google_tag_id }}');
-                    gtag('event', 'base_template_view', { 'app_name': 'Runner', 'screen_name': 'Base', 'user_name': "Rhys" });
+                    gtag('event', 'data_layer', {{ data_layer | tojson }});
                 }
         </script>
     {% endif %}
