--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -96,7 +96,7 @@
                     function gtag(){dataLayer.push(arguments);}
                     gtag('js', new Date());
                     gtag('config', '{{ google_tag_id }}');
-                    gtag('event', 'data_layer', {{ data_layer | tojson }});
+                    gtag('event', 'survey_data', {{ data_layer }});
                 }
         </script>
     {% endif %}
