--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -97,6 +97,7 @@
                     gtag('js', new Date());
                     gtag('config', '{{ google_tag_id }}');
                     gtag('event', 'survey_data', {{ data_layer | tojson }});
+                    dataLayer.push({{ data_layer | tojson }});
                 }
         </script>
     {% endif %}
