Send survey info as gtag parameters

--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -95,7 +95,7 @@
                     loadGoogleTagScript()
                     function gtag(){dataLayer.push(arguments);}
                     gtag('js', new Date());
-                    gtag('config', '{{ google_tag_id }}');
+                    gtag('config', '{{ google_tag_id }}', {{ data_layer | tojson }});
                     gtag('event', 'survey_data', {{ data_layer | tojson }});
                 }
         </script>
