--- a/templates/listcollectorcontent.html
+++ b/templates/listcollectorcontent.html
@@ -2,6 +2,8 @@
 
 {% import "macros/helpers.html" as helpers %}
 
+{% from "components/list/_macro.njk" import onsList %}
+
 {% set save_on_signout = true %}
 {% set continue_button_text = _("Continue") %}
 {% set title = content.title %}
@@ -10,8 +12,21 @@
 {% block form_content %}
     <h1>{{ title }}</h1>
     {%- if content.list and content.list.list_items -%}
-        {% set list = content.list %}
-        <div class="ons-u-mb-m">{% include "partials/summary/list-summary.html" %}</div>
+        {% set list = content.list.list_items %}
+        <div class="ons-u-mb-m">
+            {# djlint:off #}
+            {%
+              set items = map_list_config(list)
+              %}
+            {{
+              onsList({
+                  "variants": "summary",
+                  "iconPosition": "before",
+                  "itemsList": items
+              })
+            }}
+            {# djlint:on #}
+        </div>
     {%- endif -%}
     {% include "partials/contents.html" %}
 {% endblock form_content %}
