--- a/templates/listcollectorcontent.html
+++ b/templates/listcollectorcontent.html
@@ -16,15 +16,15 @@
         <div class="ons-u-mb-m">
             {# djlint:off #}
             {%
-              set items = map_list_config(list)
+              set itemsList = map_list_config(list)
               %}
             {{
               onsList({
                   "variants": "summary",
                   "iconPosition": "before",
-                  "itemsList": items
+                  "itemsList": itemsList,
               })
-            }}
+          }}
             {# djlint:on #}
         </div>
     {%- endif -%}
