--- a/templates/listcollectorcontent.html
+++ b/templates/listcollectorcontent.html
@@ -15,16 +15,14 @@
         {% set list = content.list.list_items %}
         <div class="ons-u-mb-m">
             {# djlint:off #}
-            {%
-              set itemsList = map_list_config(list)
-              %}
+            {% set itemsList = map_list_config(list) %}
             {{
-              onsList({
-                  "variants": "summary",
-                  "iconPosition": "before",
-                  "itemsList": itemsList,
-              })
-          }}
+                onsList({
+                    "variants": "summary",
+                    "iconPosition": "before",
+                    "itemsList": itemsList,
+                })
+            }}
             {# djlint:on #}
         </div>
     {%- endif -%}
