--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -73,8 +73,9 @@
         {% else %}
             {% set countdown_text = _("For security, your answers will only be available to view for another ") %}
             <h2 data-qa="view-submitted-response-title">{{ _("Get a copy of your answers") }}</h2>
+            <p class="ons-u-mb-s">{{ _("We may contact you to query your answers.") }}</p>
             <p class="ons-u-mb-s">
-                {{ _("You can <a href=\"{url}\" id=\"view-submitted-response-link\">save or print your answers</a> for your records.").format(url = content.view_submitted_response.url) }}
+                {{ _("If you need a copy for your records, <a href=\"{url}\" id=\"view-submitted-response-link\">save or print your answers</a>.").format(url = content.view_submitted_response.url) }}
             </p>
             {# djlint:off #}
             {{ onsTimeoutPanel ({
