fix panel implementation on thankyou page

--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -32,7 +32,7 @@
     {# djlint:off #}
     {% call
          onsPanel({
-              "type": "success",
+              "variant": "success",
               "iconType": "check",
               "iconSize": "xl",
               "classes": "ons-u-mb-m"
