Add new DS 72 features and fixes

--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -14,7 +14,7 @@
         {% set error_title = _("There is a problem with your answer") %}
         {% include "partials/error-panel.html" %}
     {% endif %}
-    <h1 class="question__title ons-u-fs-xxl" data-qa="confirm-email-title">{{ content.question.title }}</h1>
+    <h1 class="question__title ons-u-fs-2xl" data-qa="confirm-email-title">{{ content.question.title }}</h1>
     <div class="question__description">
         <p>{{ content.question.description }}</p>
     </div>
