--- a/templates/partials/answers/address.html
+++ b/templates/partials/answers/address.html
@@ -35,8 +35,8 @@
         "manualLinkText": _("Manually enter address"),
         "isEditable": true,
         "mandatory": answer.mandatory,
-        "APIDomain": address_lookup_api_url,
-        "APIDomainBearerToken": content.address_lookup_api_auth_token,
+        "apiDomain": address_lookup_api_url,
+        "apiDomainBearerToken": content.address_lookup_api_auth_token,
         "instructions": _("Use up and down keys to navigate suggestions once you’ve typed more than two characters. Use the enter key to select a suggestion. Touch device users, explore by touch or with swipe gestures."),
         "ariaYouHaveSelected": _("You have selected"),
         "ariaMinChars": _("Enter 3 or more characters for suggestions."),
@@ -54,8 +54,8 @@
         "errorTitle": ngettext('There is a problem with your answer', 'There are %(num)s problems with your answer', 1),
         "errorMessageEnter": _("Enter an address"),
         "errorMessageSelect": _("Select or manually enter an address"),
-        "errorMessageAPI": _("Sorry, there was a problem loading addresses"),
-        "errorMessageAPILinkText": _("Enter address manually"),
+        "errorMessageApi": _("Sorry, there was a problem loading addresses"),
+        "errorMessageApiLinkText": _("Enter address manually"),
         "options": {
             "regionCode": answer.lookup_options.region_code | lower,
             "oneYearAgo": answer.lookup_options.one_year_ago if answer.lookup_options.one_year_ago is defined,
