--- a/templates/partials/summary/list-summary.html
+++ b/templates/partials/summary/list-summary.html
@@ -18,7 +18,7 @@
         ) %}
 {% endif %}
 {% set group_config = {
-    "groupTitle": list_title,
+    "title": list_title,
     "rows": rows,
     "placeholderText": empty_list_text,
 } %}
