rever formatting change in sectionsummary
Signed-off-by: Yuyutsu Rai <Yuyutsu.Rai@ons.gov.uk>

--- a/templates/sectionsummary.html
+++ b/templates/sectionsummary.html
@@ -30,8 +30,7 @@
                 {% set add_link_text = summary.add_link_text %}
                 {% set empty_list_text = summary.empty_list_text %}
                 {% set list_title = summary.title %}
-                <div {{ 'class="ons-u-mb-l"' if not loop.last }}
-                     data-qa="{{ summary.list_name }}-list-summary">
+                <div {{ 'class="ons-u-mb-l"' if not loop.last }} data-qa="{{ summary.list_name }}-list-summary">
                     {% if summary.list %}
                         {% set list = summary.list %}
                         {% include "partials/summary/list-summary.html" %}
