--- a/templates/partials/feedback-call-to-action.html
+++ b/templates/partials/feedback-call-to-action.html
@@ -6,7 +6,7 @@
         "id": "feedback",
         "heading": _("What do you think about this service?"),
         "content": _("Your comments will help us make improvements"),
-        "linkUrl": url_for('post_submission.send_feedback'),
+        "url": url_for('post_submission.send_feedback'),
         "linkText": _("Give feedback")
     })
 }}
