--- a/templates/partials/introduction/preview.html
+++ b/templates/partials/introduction/preview.html
@@ -15,7 +15,7 @@
         {% endset %}
         {% set item = {
             "title": question.question,
-            "headingLevel": 3,
+            "titleTag": "h3",
             "content": content,
             "summaryAttributes": {
                 "data-ga": "click",
